# rust-sqlx

./: .env  Cargo.toml
src/: main.rs  service.rs
