[package]
name = "rust-sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenvy = "0.15"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = ["runtime-async-std-native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.16"